--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "openai": "^5.7.0",
+    "passport": "^0.7.0",
     "path": "^0.12.7",
     "string-width": "^7.2.0",
     "websocket": "^1.0.35"
