--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "openai": "^5.7.0",
     "passport": "^0.7.0",
     "path": "^0.12.7",
+    "socket.io": "^4.8.3",
     "string-width": "^7.2.0",
     "websocket": "^1.0.35"
   },
